--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Do not remove or rename entries in this file, only add new ones
 # See https://github.com/flutter/flutter/issues/128635 for more context.
 
+# Environment files
+.env
+.env.*
+!.env.example
+
 # Miscellaneous
 *.class
 *.lock
