--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  mailer: ^6.1.0
+  crypto: ^3.0.3
+  uuid: ^4.3.3
+  flutter_dotenv: ^5.1.0
+  dotenv: ^4.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
