--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,12 @@ dependencies:
   provider: ^6.1.1
   mailer: ^6.1.0
   crypto: ^3.0.3
-  uuid: ^4.3.3
+  uuid: ^4.2.1
   flutter_dotenv: ^5.1.0
   dotenv: ^4.2.0
+  http: ^1.1.0
+  path_provider: ^2.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
