feat(ui): update add screen and dependencies for new UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.1.0
   path_provider: ^2.1.1
   image_picker: ^1.0.7
+  dotted_border: ^2.0.0
 
 dev_dependencies:
   flutter_test:
