--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.1.1
   image_picker: ^1.0.7
   dotted_border: ^2.0.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
