--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   permission_handler: ^11.0.1
+  # google_ml_kit: ^0.16.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.3
   provider: ^6.1.1
   mailer: ^6.1.0
   crypto: ^3.0.3
@@ -48,7 +49,7 @@ dependencies:
   path_provider: ^2.1.1
   image_picker: ^1.0.7
   dotted_border: ^2.0.0
-  url_launcher: ^6.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
