--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,12 @@ dependencies:
   flutter_dotenv: ^5.1.0
   dotenv: ^4.2.0
   http: ^1.1.0
-  path_provider: ^2.1.1
+  path_provider: ^2.1.2
   image_picker: ^1.0.7
   dotted_border: ^2.0.0
   url_launcher: ^6.3.1
+  tflite_flutter: ^0.11.0
+  image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
