--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.3.1
   tflite_flutter: ^0.11.0
   image: ^3.3.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
