--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ SMTP_PASSWORD=your-app-password
 # Sender Information
 SMTP_FROM_EMAIL=your-email@gmail.com
 SMTP_FROM_NAME=ResqTail
+
+# register at https://imagga.com/profile/dashboard
+IMAGGA_API_KEY=your_api_key_here
+IMAGGA_API_SECRET=your_api_secret_here
+
+# https://huggingface.co/settings/tokens with read perms
+HUGGINGFACE_API_KEY=api_key
