feat: add GOOGLE_MAPS_API_KEY to .env.example for map integration

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ IMAGGA_API_SECRET=your_api_secret_here
 
 # https://huggingface.co/settings/tokens with read perms
 HUGGINGFACE_API_KEY=api_key
+
+GOOGLE_MAPS_API_KEY=api_key
