--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,28 +30,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.5.0
-  geolocator: ^10.1.0
-  permission_handler: ^11.0.1
-  # google_ml_kit: ^0.16.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.5.3
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+  image_picker: ^1.0.5
+  intl: ^0.19.0
+  flutter_svg: ^2.0.9
+  flutter_animate: ^4.5.0
+  flutter_slidable: ^3.0.1
+  flutter_dotenv: ^5.1.0
+  image: ^4.5.4
   mailer: ^6.1.0
   crypto: ^3.0.3
   uuid: ^4.2.1
-  flutter_dotenv: ^5.1.0
-  dotenv: ^4.2.0
   http: ^1.1.0
-  path_provider: ^2.1.2
-  image_picker: ^1.0.7
   dotted_border: ^2.0.0
   url_launcher: ^6.3.1
-  image: ^3.3.0
-  intl_phone_field: ^3.2.0
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
