--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,24 +35,23 @@ dependencies:
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
   image_picker: ^1.0.5
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_svg: ^2.0.9
   flutter_animate: ^4.5.0
-  flutter_slidable: ^3.0.1
+  flutter_slidable: ^4.0.0
   flutter_dotenv: ^5.1.0
   image: ^4.5.4
   mailer: ^6.1.0
   crypto: ^3.0.3
   uuid: ^4.2.1
   http: ^1.1.0
-  dotted_border: ^2.0.0
+  dotted_border: ^3.0.1
   url_launcher: ^6.3.1
   google_maps_flutter: ^2.5.0
-  geolocator: ^10.1.0
-  permission_handler: ^11.0.1
-  firebase_core: ^2.30.0
-  cloud_firestore: ^4.15.8
-  firebase_storage: ^11.6.5
+  geolocator: ^14.0.1
+  permission_handler: ^12.0.0+1
+  firebase_core: ^3.14.0
+  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
